Added resources (javascript and CSS) and login HTML page

--- a/projectUploader.html
+++ b/projectUploader.html
@@ -12,7 +12,7 @@
    <body>
         <ul id = menu>
          <li><a href = "index.html">Home</a></li>      
-         <input class = "searchbar" type="text" placeholder="Search">
+         <li><input class = "searchbar" type="text" placeholder="Search"></li>
       </ul>
         
        <div class = gameForm>
@@ -37,7 +37,7 @@
 
            <div class = "gameProper">
            Game:<br>
-               <input type = "file" id = "gameProper"><br>
+               <input type = "file" id = "gameProper"><br><br>
 
                <input type = submit value = "Submit Game">
            </div>
