changed screenshots to screenshot

--- a/projectUploader.html
+++ b/projectUploader.html
@@ -31,7 +31,7 @@
            </div>
 
            <div class = "gameScreenshots">
-           Screenshots (optional):<br>
+           Screenshot (optional):<br>
                <input type = "file" accepts = "image/*" id = "gameScreenshots"><br>
            </div>
 
