updated CSS and added centering class to many of the html files

--- a/userPageTemplate.html
+++ b/userPageTemplate.html
@@ -4,6 +4,7 @@
       <title>USER NAME</title>    
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
       <link rel="stylesheet" href="resources/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <script type="text/javascript" src="resources/jquery-3.1.1.min.js"></script>
       <script type="text/javascript" src="resources/search.js"></script>
    </head>
@@ -13,7 +14,6 @@
          <li><a href = "index.html">Home</a></li>      
          <input class = "searchbar" type="text" placeholder="Search">
       </ul>
-        
     <h1>USERNAME</h1>
         <div class = "avatar">
         <img src = "resources/avatar.jpg" alt="avatar.jpg">
