--- a/projectUploader.html
+++ b/projectUploader.html
@@ -4,17 +4,18 @@
       <title>Upload</title>    
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
       <link rel="stylesheet" href="resources/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <script type="text/javascript" src="resources/jquery-3.1.1.min.js"></script>
       <script type="text/javascript" src="resources/search.js"></script>
       <script type="text/javascript" src="resources/errorChecker.js"></script>
    </head>
     
    <body>
-        <ul id = menu>
+       <ul id = menu>
          <li><a href = "index.html">Home</a></li>      
          <li><input class = "searchbar" type="text" placeholder="Search"></li>
       </ul>
-        
+       <div class = "centering"> 
        <div class = gameForm>
        <form id = "gameForm" method = "post" action="#" onsubmit="return validate(this);">
        <fieldset>
@@ -44,6 +45,7 @@
        </fieldset>
        </form>
        </div>
-   </body>
+    </div>
+    </body>
 
 </html>
