updated CSS for game page and game page itself

--- a/gamePageTemplate.html
+++ b/gamePageTemplate.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
-   <head>
+buttonDOCTYPE html>
+<buttonml>
+buttonhead>
       <title>GAME NAME</title>    
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
       <link rel="stylesheet" href="resources/style.css">
@@ -34,9 +34,9 @@
     </div>
     
     <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span> 
-        <span class="dot" onclick="currentSlide(2)"></span> 
-        <span class="dot" onclick="currentSlide(3)"></span> 
+        <span class="button" onclick="currentSlide(1)"></span> 
+        <span class="button" onclick="currentSlide(2)"></span> 
+        <span class="button" onclick="currentSlide(3)"></span> 
     </div>
 
     <h2>Description</h2>
