Updated CSS, game page, and user page

--- a/userPageTemplate.html
+++ b/userPageTemplate.html
@@ -19,12 +19,14 @@
         <img src = "resources/avatar.jpg" alt="avatar.jpg">
         </div>
         
-    <h2>GAMES</h2>
+        <div id = "gameLibrary">
+        <legend>GAMES</legend>
         <ul> <!-- entries for each game uploaded by user, based on database of games -->
             <li><a href= "">Game One</a> </li>
             <li><a href= "">Game Two</a> </li>
             <li><a href= "">Game Three</a> </li>
         </ul>
+        </div>
     </body>
     
 </html>
