fixed error in game page

--- a/gamePageTemplate.html
+++ b/gamePageTemplate.html
@@ -1,6 +1,5 @@
-buttonDOCTYPE html>
+<DOCTYPE html>
 <buttonml>
-buttonhead>
       <title>GAME NAME</title>    
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
       <link rel="stylesheet" href="resources/style.css">
