fixed second error

--- a/gamePageTemplate.html
+++ b/gamePageTemplate.html
@@ -1,5 +1,5 @@
 <DOCTYPE html>
-<buttonml>
+   <head>
       <title>GAME NAME</title>    
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
       <link rel="stylesheet" href="resources/style.css">
