--- a/gamePageTemplate.html
+++ b/gamePageTemplate.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
    <head>
       <title>GAME NAME</title>    
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
