added link to login and updated CSS

--- a/gamePageTemplate.html
+++ b/gamePageTemplate.html
@@ -11,6 +11,7 @@
    <body>
       <ul id = menu>
          <li><a href = "index.html">Home</a></li>      
+         <li><a href = "loginPage.html">Login</a></li>
          <input class = "searchbar" type="text" placeholder="Search">
       </ul>
     
