--- a/projectUploader.html
+++ b/projectUploader.html
@@ -12,7 +12,8 @@
     
    <body>
        <ul id = menu>
-         <li><a href = "index.html">Home</a></li>      
+         <li><a href = "index.html">Home</a></li>  
+         <li><a href = "loginPage.html">Login</a></li>
          <li><input class = "searchbar" type="text" placeholder="Search"></li>
       </ul>
        <div class = "centering"> 
