--- a/userPageTemplate.html
+++ b/userPageTemplate.html
@@ -12,6 +12,7 @@
     <body>
     <ul id = menu>
          <li><a href = "index.html">Home</a></li>      
+         <li><a href = "loginPage.html">Login</a></li>
          <input class = "searchbar" type="text" placeholder="Search">
       </ul>
     <h1>USERNAME</h1>
