added test files for screenshots and avatar, updated CSS, updated slideshow

--- a/gamePageTemplate.html
+++ b/gamePageTemplate.html
@@ -2,6 +2,7 @@
    <head>
       <title>GAME NAME</title>    
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link rel="stylesheet" href="resources/style.css">
       <script type="text/javascript" src="resources/jquery-3.1.1.min.js"></script>
       <script type="text/javascript" src="resources/slideshow.js"></script>
@@ -33,10 +34,10 @@
        </div> 
     </div>
     
-    <div style="text-align:center">
-        <span class = "button" onclick = "currentSlide(1)"></span> 
-        <span class = "button" onclick = "currentSlide(2)"></span> 
-        <span class = "button" onclick = "currentSlide(3)"></span> 
+    <div class = "buttonSet">
+        <span class = "button" onclick = "setSlide(1)"></span> 
+        <span class = "button" onclick = "setSlide(2)"></span> 
+        <span class = "button" onclick = "setSlide(3)"></span> 
     </div>
 
     <h2>Description</h2>
