updated and improved JS for slideshow as well as CSS

--- a/gamePageTemplate.html
+++ b/gamePageTemplate.html
@@ -35,16 +35,14 @@
     </div>
     
     <div class = "buttonSet">
-        <span class = "button" onclick = "setSlide(1)"></span> 
-        <span class = "button" onclick = "setSlide(2)"></span> 
-        <span class = "button" onclick = "setSlide(3)"></span> 
-    </div>
+        <span class = "button" onclick = "plusSlides(-1)">&lt;</span> 
+        <span class = "button" onclick = "plusSlides(1)">&gt;</span> 
+    </div
 
     <h2>Description</h2>
        <!--brief description of the game-->
        <div class = "description">
-          <p>
-          In ut elementum libero. Nulla facilisi. Etiam eget velit vitae lectus egestas pellentesque at eu nunc. Praesent est nunc, cursus id vestibulum nec, gravida ac felis. Ut lobortis turpis quis odio volutpat, eget semper lacus consectetur. Duis vehicula dapibus est sed dapibus. Integer venenatis nulla urna, vitae faucibus nisi aliquet a. Suspendisse potenti. Curabitur tempor enim eu diam euismod pellentesque. Pellentesque at cursus augue. Sed vulputate facilisis erat, non venenatis eros sagittis vulputate. 
+          <p>resources/In ut elementum libero. Nulla facilisi. Etiam eget velit vitae lectus egestas pellentesque at eu nunc. Praesent est nunc, cursus id vestibulum nec, gravida ac felis. Ut lobortis turpis quis odio volutpat, eget semper lacus consectetur. Duis vehicula dapibus est sed dapibus. Integer venenatis nulla urna, vitae faucibus nisi aliquet a. Suspendisse potenti. Curabitur tempor enim eu diam euismod pellentesque. Pellentesque at cursus augue. Sed vulputate facilisis erat, non venenatis eros sagittis vulputate. 
           </p>
        
        </div>
