Updated index, CSS, user page

--- a/userPageTemplate.html
+++ b/userPageTemplate.html
@@ -20,6 +20,8 @@
         <img src = "resources/avatar.jpg" alt="avatar.jpg">
         </div>
         
+        <button> <a href = "projectUploader.html">Upload Games </a></button>
+        
         <div id = "gameLibrary">
         <legend>GAMES</legend>
         <ul> <!-- entries for each game uploaded by user, based on database of games -->
